--- a/package.json
+++ b/package.json
@@ -6,11 +6,13 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
+    "deploy": "bash deploy.sh",
     "preview": "vite preview"
   },
   "devDependencies": {
     "eslint": "^8.33.0",
     "eslint-plugin-unicorn": "^45.0.2",
+    "gh-pages": "^5.0.0",
     "vite": "^4.1.0"
   }
 }
