--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
   },
   "devDependencies": {
     "eslint": "^8.33.0",
+    "eslint-config-prettier": "^8.6.0",
+    "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-unicorn": "^45.0.2",
+    "prettier": "^2.8.4",
     "vite": "^4.1.0"
   }
 }
