--- a/backend/.prettierrc
+++ b/backend/.prettierrc
@@ -1,4 +1,9 @@
 {
+  "bracketSpacing": true,
+  "endOfLine": "auto",
+  "printWidth": 80,
+  "semi": true,
   "singleQuote": true,
-  "trailingComma": "all"
+  "trailingComma": "all",
+  "tabWidth": 2
 }
