--- a/server/package.json
+++ b/server/package.json
@@ -11,6 +11,9 @@
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
+    "docker:build": "docker-compose up -V --build",
+    "docker:start": "docker compose up",
+    "docker:stop": "docker compose down",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
