--- a/server/docker-compose.yml
+++ b/server/docker-compose.yml
@@ -11,7 +11,7 @@ services:
     env_file:
       - .env
     environment:
-      DB_DATABASE_URL: postgresql://${DB_USERNAME}:${DB_PASSWORD}@postgres:${DB_PORT}/${DB_DATABASE_NAME}?schema=public
+      DB_DATABASE_URL: postgresql://${DB_USERNAME}:${DB_PASSWORD}@postgres:${DB_PORT}/${DB_NAME}?schema=public
     volumes:
       - .:/usr/src/app
       - /usr/src/app/node_modules
