--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "typescript": "^4.9.3",
     "vite": "^4.0.0",
     "vite-plugin-checker": "^0.5.5",
+    "vite-plugin-eslint": "1.8.1",
     "vite-tsconfig-paths": "^4.0.5"
   }
 }
